<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu" >

    <EditText
        android:id="@+id/pair_with_bluetooth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_pair_with_bluetooth" />

    <EditText
        android:id="@+id/go_to_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_show_map" />

    <EditText
        android:id="@+id/go_to_get_directions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_activity_get_directions" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="388dp"
        android:layout_centerInParent="true"
        android:src="@drawable/mm_logo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/button1"
        android:onClick="goToGetDirections"
        android:text="@string/title_activity_get_directions" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="goToShowMap"
        android:text="@string/title_show_map" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button1"
        android:onClick="goToBluetooth"
        android:text="@string/pair_now" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_main_menu" />

</RelativeLayout>